--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -53,6 +53,18 @@
     font-weight: 500;
   }
   
+  .SearchBar-fields select {
+    width: 21rem;
+    padding: .66rem 1rem;
+    margin-right: 2.22rem;
+    border: 1px solid #fff;
+    border-radius: 4px;
+    font-size: .77rem;
+    font-weight: 500;
+    color: #2d2c55;
+    font-weight: bold;
+  }
+
   .SearchBar-fields input:last-child {
     margin-right: 0;
   }
